--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,15 +1,17 @@
 <% if @erro %>
-  msgTopo("<%= @erro  %>", "erro", 5000);
+  msgTopo("<%= t :error_sending_comment  %>", "erro", 5000);
 <% else %>
-  msgTopo("<%=@message%>", "msg", 5000);
+  msgTopo("<%= @message %>", "msg", 5000);
+  /*
   if($('#comments section').length < 1){
     $('#comments h2:first').text('1 <%= t :comment %>.');
   }
+  */
   <% if not @comment.nil? and not @comment.comment_id.nil? and @comment.comment_id > 0 %>
     $('#new_comment_<%= @comment.comment_id %>').fadeOut('fast', function(){ $(this).remove(); });
     $("<%= escape_javascript(render(@comment)) %>").insertAfter('#comment-<%= @comment.comment_id %>');
   <% else %>
-    $('#comments').append("<%= escape_javascript(render(@comment)) %>");
+    $('#comments-list').append("<%= escape_javascript(render(@comment)) %>");
   <% end %>
   $('#new_comment').find('input:text, textarea').val('');
 <% end %>
