--- a/app/views/comments/reply.js.erb
+++ b/app/views/comments/reply.js.erb
@@ -1,6 +1,10 @@
 if($('#new_comment_<%= @comment.id %>').length == 0){
   $('<%= escape_javascript(render("comments/form", :id => "new_comment_#{@comment.id}")) %>').insertAfter('#lnk-reply-<%= @comment.id %>');
-  $('#new_comment_<%= @comment.id %> input:text:first').focus();
+  var $input = $('#new_comment_<%= @comment.id %> input:text:first');
+  $input.focus();
+  $('html, body').animate({
+  	scrollTop: $input.offset().top
+  });
 }else{
   $('#new_comment_<%= @comment.id %>').slideUp('fast', function(){
     $(this).remove();
