--- a/app/views/posts/categories.html.erb
+++ b/app/views/posts/categories.html.erb
@@ -1,23 +1,34 @@
-<section id="categories">
-  <header>
-    <h1>Categorias</h1>
-  </header>
-
-  <ul>
-  <% @categories.each do |category| %>  
-    <% if category.posts.published.length > 0 %>
-    <li>
-        <h2><%= category.name %></h2>
+<div class="container">
+  <div class="row">
+    <div class="span12">
+      <header>
+        <h1>Categorias</h1>
+      </header>
+    </div>
+  </div>
+  <div class="row">
+    <div class="span3">
+      <%= render "layouts/blog_about" %>
+    </div>
+    <div class="span8 offset1">
+      <section id="categories">
         <ul>
-        <% category.posts.published.each do |post| %>
+        <% @categories.each do |category| %>  
+          <% if category.posts.published.length > 0 %>
           <li>
-            <time datetime="<%= post.published_date.to_s[0..9] %>"><%= l post.published_date %></time>
-            <%= link_to post.title, post_url(post) %>
+              <h2><%= category.name %></h2>
+              <ul>
+              <% category.posts.published.each do |post| %>
+                <li>
+                  <%= link_to post.title, post_url(post) %>
+                </li>
+              <% end %>
+              </ul>
           </li>
+          <% end %>
         <% end %>
         </ul>
-    </li>
-    <% end %>
-  <% end %>
-  </ul>
-</section>
+      </section>
+    </div>
+  </div>
+</div>
