Adiciona ícone de nova janela nos posts do tableless

--- a/app/views/layouts/_blog_about.html.erb
+++ b/app/views/layouts/_blog_about.html.erb
@@ -1,6 +1,6 @@
 <aside class="about clearfix">
   <p class="avatar"><%= image_tag "me.jpg" %></p>
-  <p class="info">Davi Ferreira trabalha como desenvolvedor na <a href="http://www.globo.com" rel="external" title="Globo.com">Globo.com</a>, nos sites de entretenimento.</p>
+  <p class="info">Davi Ferreira trabalha como desenvolvedor na <a href="http://www.globo.com" rel="external" title="Globo.com">Globo.com</a>, atuando nos sites de entretenimento.</p>
   <p class="clear">Você pode seguí-lo no <a href="http://twitter.com/davitferreira">Twitter</a> e conferir seus projetos open source no <a href="http://www.github.com/daviferreira">GitHub</a>.</p>
   <p>Entre em contato via e-mail <a href="mailto:hi@daviferreira.com">hi@daviferreira.com</a>.</p>
   <nav>
