Corrige CSS dos H3s dos posts

--- a/public/stylesheets/blog.css
+++ b/public/stylesheets/blog.css
@@ -177,7 +177,7 @@ font-size:14px;
 margin:20px 0 0 160px;
 }
 
-article#main h2, article#main h3 {
+article#main h2 {
   margin: 60px 0 40px 0;
 }
 
